# aktualizr-torizon

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
config/secondary/: dockercomposesec.json  example.redis.yml
src/: CMakeLists.txt
src/aktualizr_torizon_primary/: CMakeLists.txt  main.cc  secondary.cc  secondary_config.cc  secondary_config.h
src/torizon_virtual_secondary/: CMakeLists.txt  dockercomposesecondary.cc  managedsecondary.cc  managedsecondary.h
